[metadata]
description = s3 plugin for dvc
name = dvc-s3
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
license_file = LICENSE
url = http://dvc.org
project_urls =
    Documentation = https://dvc.org/doc
    Source = https://github.com/iterative/dvc-s3
download_url = https://github.com/iterative/dvc-s3
keywords = dvc, s3
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
setup_requires =
    setuptools>=48
    setuptools_scm[toml]>=6.3.1
python_requires = >=3.8
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    dvc
    s3fs>=2023.4.0
    aiobotocore[boto3]>=2.5.0
    flatten_dict>=0.4.1,<1

[options.extras_require]
tests =
    wheel==0.37.0
    dvc[testing]
    # Test requirements
    pytest==6.2.5
    pytest-cov==3.0.0
    pytest-xdist==2.4.0
    pytest-mock==3.6.1
    pytest-lazy-fixture==0.6.3
    pytest-docker==0.10.3
    pytest-servers[s3]==0.2.0
    flaky==3.7.0
    mock==4.0.3
    wget==3.2
    filelock==3.3.2
    xmltodict==0.12.0
    # required by collective.checkdocs
    Pygments==2.10.0
    collective.checkdocs==0.2
    pydocstyle==6.1.1
    # pylint requirements
    pylint==2.15.9
    # we use this to suppress some messages in tests, eg: foo/bar naming,
    # and, protected method calls in our tests
    pylint-plugin-utils==0.6
    # type-checking
    mypy==0.991
    types-requests==2.25.11
    types-tabulate==0.8.3
    types-toml==0.10.1
    # optional dependencies
    pywin32>=225; sys_platform == 'win32'

[flake8]
ignore=
    # Whitespace before ':'
    E203,
    # Too many leading '#' for block comment
    E266,
    # Line break occurred before a binary operator
    W503,
    # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
    P1,
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
